# my-vibe-scaffolding

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  GET_STARTED.md  README.md  README.zh-TW.md  SECURITY.md  TASK_COMPLETION.md  TEMPLATE_SYNC.md  config.toml.example  opencode.json
.agents/: README.md  service-detection.md  workflows.yaml
.agents/agents/: architect.md  planner.md  security-reviewer.md
.agents/agentshield/: README.md
.agents/commands/: analyze.md  refactor.md  security-scan.md  test-all.md
.agents/rules/: README.md  code-style-rules.md  git-rules.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-placeholder.yml  ci.yml  validate-config.yml  validate-modules.yml.disabled  validate-pr-templates.yml
.opencode/: INSTALL.md
.scaffolding/: CHANGELOG.md  README.md  README.zh-TW.md  SECURITY.md
.scaffolding/agents/: service-detection.md
.scaffolding/docs/: ACADEMIC_WRITING.md  ACCESSIBILITY_STANDARDS.md  ADR_TEMPLATE.md  AGENTS_MD_GUIDE.md  API_DESIGN.md  AUTH_IMPLEMENTATION.md  CITATION_MANAGEMENT.md  CLI_DESIGN.md  DATABASE_SCHEMA.md  DIRECTORY_RESTRUCTURE_2026-03-27.md  DOCUMENTATION_GUIDELINES.md  DOCUMENT_STRUCTURE.md  FEATURES.md  FILE_HANDLING.md  FRONTEND_STANDARDS.md  (+44 more)
.template/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-TW.md
data/: bundles.yaml
docs/: DOCUMENTATION_GUIDELINES.md  PRD-claude-code-inspired-upgrades.md  README.md
i18n/: README.md
languages/python/: .gitignore.python  pyproject.toml
scripts/: bump-version.sh  init-project.sh  lib-config.sh  verify-setup.sh  worklog-done.sh  worklog-init.sh  worklog-start.sh  worklog-update.sh
(+173 files in other folders)
